# 3dMathBook

./: .gitignore  README.md  Vector3.h
3dMathBook/: CMakeLists.txt  README.md  main.cpp
3dMathBook/header/: MathUtil .h  MathUtil.h  Quaternion.h  Vector3.h
3dMathBook/res/: MathUtil.cpp
3dMathBook/src/: EulerAngles.cpp  MathUtil.cpp  Quaternion.cpp
basic_lab/: CMakeLists.txt  README.md  main.cpp
basic_lab/header/: EulerAngles.h  MathUtil.h  Quaternion.h  Vector3.h
basic_lab/src/: MathUtil.cpp  Quaternion.cpp
